--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Movie App</string>
-    <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_activity_home">HomeActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -16,5 +16,12 @@
 
     <string name="popular">Popular</string>
     <string name="most_popular_movies">Most popular movies</string>
+    <string name="menu_preferences_title">Preferências</string>
+    <string name="menu_home_title">Página Principal</string>
+    <string name="menu_signout_title">Deslogar</string>
+    <string name="menu_signout">Sair</string>
+    <string name="bottom_nav_search">Pesquisa</string>
+    <string name="bottom_nav_home">Principal</string>
+    <string name="bottom_nav_favorites">Favoritos</string>
 
 </resources>
