Shared preferences limpado ao sair, adicionado back actionbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="bottom_nav_search">Pesquisa</string>
     <string name="bottom_nav_home">Principal</string>
     <string name="bottom_nav_favorites">Favoritos</string>
+    <string name="configura_es">Configurações</string>
+    <string name="modo_escuro">Modo escuro</string>
 
 </resources>
