refactored item layout and search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="bottom_nav_favorites">Favoritos</string>
     <string name="description">Description</string>
     <string name="movie_title">Title</string>
+    <string name="type_to_search_for_a_movie">Type to search for a movie</string>
 
 </resources>
