--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="movie_title">Title</string>
     <string name="type_to_search_for_a_movie">Type to search for a movie</string>
     <string name="meus_favoritos">Meus Favoritos</string>
+    <string name="nome_do_filme">Nome do Filme</string>
 
 </resources>
