--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_notification">Notificações</string>
     <string name="title_activity_main_drawer">MainDrawerActivity</string>
     <string name="title_activity_main_drawer2">MainDrawerActivity2</string>
 
