Adicionado scroll aos chips de gênero

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="cancelar">Cancelar</string>
     <string name="senha">Senha</string>
+    <string name="g_nero">Gênero</string>
 
 </resources>
